--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+/*
+  This change log has been deprecated, now for a list of changes & files changed, visit:
+  https://github.com/Angel-Gabriel/Deyan-Shell/commits/master
+  thanks!
+*/
+
 2011-08-10 	Angel Gabriel	<angel.wrt@gmail.com>
 
 	*manifest.xml:	Version upgraded to 1.1.1
